website/src/css/custom.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital@0;1&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* Override infima variables */
:root {
  --ifm-font-color-base: #000E38;
  --ifm-color-primary: #166BFF;
  /*--ifm-color-primary-dark: #526288;*/
  /*--ifm-color-primary-darker: #0C3D60;*/
  /*--ifm-color-primary-darkest: #000E38;*/
  --ifm-color-primary-light: #4589FF;
  --ifm-color-primary-lighter: #8AB5FF;
  --ifm-color-primary-lightest: #B9D3FF;

  /* Fonts */
  --ifm-font-family-base: Roboto, system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
  --ifm-font-family-monospace: 'Roboto Mono', SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace;

  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);

  /* Spacing */
  --ifm-spacing-horizontal: 2rem;
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --ifm-font-color-base: #EAEBED;
  --ifm-color-primary: #00E5A4;
  /*--ifm-color-primary-dark: #526288;*/
  /*--ifm-color-primary-darker: #0C3D60;*/
  /*--ifm-color-primary-darkest: #000E38;*/
  --ifm-color-primary-light: #33EAAE;
  --ifm-color-primary-lighter: #78EEC5;
  --ifm-color-primary-lightest: #B2F7E1;

  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
}

.header-github-link::before {
  content: '';
  width: 24px;
  height: 24px;
  display: flex;
  background-color: #1c1e21;
  mask: url("/img/github.svg");
  mask-repeat: no-repeat;
  mask-size: contain;
  transition: background-color var(--fm-transition-fast);
}

[data-theme='dark'] .header-github-link::before {
  background-color: white;
}

.header-github-link:hover::before {
  background-color: var(--ifm-color-primary);
}

.header-formidable-link::before {
  content: '';
  width: 26px;
  height: 21px;
  display: block;
  background-color: #1c1e21;
  mask: url("/img/nearform-icon.svg");
  mask-repeat: no-repeat;
  mask-size: contain;
  transition: background-color var(--ifm-transition-fast);
}

.header-formidable-link:hover::before {
  background-color: var(--ifm-color-primary);
}

[data-theme='dark'] .header-formidable-link::before {
  background-color: white;
}

[data-theme='dark'] .header-formidable-link:hover::before {
  background-color: var(--ifm-color-primary);
}

